# gridtokenx-app

./: .env  .env.docker  .env.example  .gitignore  DOCKER_DEPLOYMENT_STATUS.md  Makefile  QUICK_GUIDE.md  README.md  SIMULATOR_TO_BLOCKCHAIN_PLAN.md  deploy.sh  dev-wallet.json  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
smart-meter-simulator/: .env  .env.example  API_ENDPOINTS.md  IEEE2030_5_IMPLEMENTATION_PLAN.md  README.md  README_AMI.md  USAGE.md  ami_simulator.py  campus_network_deployment.py  certificate_infrastructure_manager.py  certificate_lifecycle.py  deploy-ami-simulator.sh  deploy-utcc-campus.sh  deploy_certificate_infrastructure.py  deploy_pki_infrastructure.py  generate_campus_certificates.py  pki_config.json  pki_infrastructure.py  pyproject.toml  quick-check.sh  realtime-monitor.html  result.md  run_ieee2030_5.sh  run_simulator.py  simulator.py  test_ieee2030_5.py  test_websockets.py  websocket_client.py
smart-meter-simulator/certs/: ca-key.pem  ca.crt  ca.key  ca.pem  ca.srl  client-key.pem  client.csr  client.pem
smart-meter-simulator/certs/devices/: LFDI_AMI_METER_UTCC_001.json  LFDI_AMI_METER_UTCC_001_key.json  LFDI_AMI_METER_UTCC_002.json  LFDI_AMI_METER_UTCC_002_key.json  LFDI_AMI_METER_UTCC_003.json  (+47 more)
smart-meter-simulator/config/: ieee2030_5_config.json  utcc_campus_config.json
smart-meter-simulator/ieee2030_5/: __init__.py  client.py  function_sets.py  resources.py  security.py  server.py
smart-meter-simulator/pki/: deployment_report.json
src/: app.tsx  (+1 more)
(+372 files in other folders)
